compiler/testData/diagnostics/tests/CompareToWithErrorType.kt
fun test() {
  if (<!UNRESOLVED_REFERENCE!>x<!> <!DEBUG_INFO_MISSING_UNRESOLVED!>><!> 0) {

  }
}
